# attn

./: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
Cuda/: advanced_flash_attention_double_buffer.cu  multi_gpu_flash_attention.cu
benchmarks/: compare_fused_fa3.py
docs/: Index.md
examples/: basic_usage.py  integration_example.py  long_context_example.py
stream_attention/: __init__.py
stream_attention/benchmarks/: accuracy_test.py  benchmark_suite.py
stream_attention/core/: __init__.py  attention.py  config.py  flashattention_v3.py  fused_online_attention.py  multihead_attention.py  ring_attention.py  star_attention.py
stream_attention/integration/: hf.py
stream_attention/utils/: __init__.py  memory.py
tests/: __init__.py  test_attention.py  test_benchmark.py
