[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "stream-attention"
version = "1.0.0"
description = "Production-ready multi-GPU FlashAttention implementation with support for extremely long contexts"
authors = [{name = "StreamAttention Team", email = "streamattention@example.com"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "torch==2.1.0",
    "triton==2.1.0",
    "pyyaml>=6.0",
]

[tool.stream_attention]
cuda_version = "12.1"
triton_version = "2.1.0"
